HeapLens: draw one object's layout from what this VM says (#38)
`jvx.lens(SomeClass.class)` measures the header, every field offset, the
gaps between them and the padding at the end, and draws the object as
bytes. Nothing is looked up in a table: start the kernel with
-XX:-UseCompactObjectHeaders and the picture changes, which is the only
reason a picture is worth having in this project.

The measuring is in jvx/20-jvx.jsh and the drawing is in jvx/18-lens.jsh,
which takes measurements rather than making them. That split is what lets
the test hand it a layout no JVM would produce and check the drawing,
and separately check that the measuring produces the right layout.

A gap and padding are different colours because they are different
things. Padding at the end is the object being rounded up to
ObjectAlignmentInBytes. A gap in the middle is a field that could not
start where the last one ended, and it is the only one of the two a
reader can usually do anything about.

O01 gains three drawings: Two, which fills itself exactly; Mixed, which
HotSpot lays out in a different order than it was declared; and Big,
whose superclass byte forces its long to byte 16 and leaves seven bytes
belonging to nobody. All three were measured on the pinned JDK rather
than reasoned about, and the first draft of the prose was wrong about
Mixed until the kernel drew it.